tests/testcases/valid/semantic/test_empty_class.ciel
// Test empty class
class Empty {
public:
    void doNothing() {
        return;
    }
};

int main() {
    class Empty e;
    return 0;
}
